Implemented auth service.
